Fix alignment of menu

--- a/styles/common.css
+++ b/styles/common.css
@@ -71,6 +71,7 @@ header h1 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
